# tumult-analytics

./: .buildscripts  .buildscripts.base  .gitignore  .gitlab-ci.yml  .pipeline_handlers  CHANGELOG.md  CHANGELOG.rst  CHANGELOG_PRO.rst  CONTRIBUTING.md  Makefile  README.md  noxfile.py  pyproject.toml  testing.ipynb
.ci/: common.yml  pipeline-handler.py  pipeline-handlers.bash
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  installation_issue.yaml  performance_issue.yaml
.github/actions/push_docs/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: commit.yml  dummy_pr.yml  merge_queue.yml  push.yml  release.yml
.gitlab/issue_templates/: Default.md  release_template.md
.nox-utils/nox_utils/: __init__.py  dependencies.py  environment.py  utils.py
benchmark/: benchmark_keyset_cross_product_per_factors.py  benchmark_keyset_cross_product_per_size.py  benchmark_keyset_joins.py  benchmark_keyset_projection.py  benchmark_no_privacy_groupby_counts.py  benchmark_synthetic_data.py  benchmarking_utils.py
demos/: intro_demo.ipynb  product-keyset-bug.ipynb  wmf_demo.ipynb
doc/: changelog.rst  conf.py  index.rst  installation.rst  intersphinx_mapping.json
doc/_static/css/: custom.css
doc/_templates/: sidebar-nav-bs.html  versions.html
doc/_templates/autosummary/: base.rst  class.rst  method.rst
doc/additional-resources/: changelog.rst  index.rst  license.rst
doc/getting-started/: index.rst
doc/getting-started/tutorials/: ClampingBounds.rst  FirstSteps.rst  GroupByQueries.rst  PrivacyBudgetBasics.rst
doc/howto-guides/: aws-glue.rst  databricks.rst  index.rst  installation.rst
doc/howto-guides/bigquery/: bigquery-setup.rst
doc/templates/python/: class.rst  module.rst
doc/topic-guides/: index.rst  working-with-sessions.rst
doc/tutorials/: clamping-bounds.rst  first-steps.rst  groupby-queries.rst  privacy-budget-basics.rst  privacy-id-basics.rst  simple-transformations.rst
examples/: grouping_flatmap_for_safetab.ipynb  interactive_evaluation.ipynb  load_validate_csv_session.ipynb  session_builder.ipynb
src/tmlt/analytics/: __init__.py  _catalog.py  _neighboring_relation.py  _neighboring_relation_visitor.py  _noise_info.py  _query_expr.py  _schema.py  _table_reference.py  _transformation_utils.py  binning_spec.py  config.py  privacy_budget.py  query_builder.py  session.py  utils.py
src/tmlt/analytics/_query_expr_compiler/: _base_measurement_visitor.py  _base_transformation_visitor.py  _compiler.py  _measurement_visitor.py  _rewrite_rules.py
src/tmlt/analytics/constraints/: _base.py  _truncation.py
src/tmlt/analytics/keyset/: _keyset.py
src/tmlt/analytics/keyset/_ops/: __init__.py  _base.py  _cross_join.py  _detect.py  _filter.py  _from_dataframe.py  _from_tuples.py  _join.py  _project.py  _rules.py  _subtract.py  _union.py
test/: __init__.py  conftest.py
test/system/: __init__.py  conftest.py  test_session.py
test/system/session/: conftest.py  test_special_values.py
test/system/session/add_rows_with_id/: __init__.py  test_l0_linf_truncation.py  test_max_rows_per_id.py
test/system/session/ids/: test_constraint_propagation.py  test_count_distinct_optimization.py  test_id_col_operations.py  test_l0_linf_truncation.py  test_l1_truncation.py  test_partition.py
test/system/session/ids/queries/: test_flat_map_by_id.py
test/system/session/mixed/: test_mixed_session.py
test/system/session/rows/: conftest.py  test_add_max_rows.py  test_add_max_rows_in_max_groups.py  test_add_max_rows_infs_nulls.py  test_invalid.py
test/unit/: test_binning_spec.py  test_catalog.py  test_cleanup.py  test_coerce_spark_schema.py  test_config.py  test_constraints.py  test_keyset.py  test_neighboring_relations.py  test_noise_info.py  test_privacy_budget.py  test_privacy_budget_rounding_helper.py  test_protected_change.py  test_query_builder.py  test_query_expr_compiler.py  test_query_expression.py  test_query_expression_schema.py  test_query_expression_visitor.py  test_schema.py  test_schema_conversion.py  test_session.py  test_table_identifiers.py  test_truncation_strategy.py  test_utils.py
test/unit/_query_expr_compiler/: __init__.py  test_measurement_visitor.py  test_output_schema_visitor.py  test_transformation_visitor.py
test/unit/base_builder/: test_builder.py  test_mixins.py
test/unit/keysets/: test_cross_join.py  test_decomposition.py  test_detect.py  test_equivalence.py  test_filter.py  test_from_dataframe.py  test_from_dict.py  test_from_tuples.py  test_join.py  test_keyset.py  test_product_keyset.py  test_project.py  test_rewrite.py  test_subtract.py  test_union.py
test/unit/query_expr_compiler/: __init__.py  test_measurement_visitor.py  test_output_schema_visitor.py  test_rewrite_rules.py  test_transformation_visitor.py
test/unit/query_expr_compiler/transformation_visitor/: conftest.py  test_add_keys.py  test_add_rows.py  test_constraints.py
tmlt/analytics/: __init__.py  _base_builder.py  _catalog.py  _coerce_spark_schema.py  _neighboring_relation.py  _neighboring_relation_visitor.py  _noise_info.py  _privacy_budget_rounding_helper.py  _query_expr.py  _schema.py  _table_identifiers.py  _table_reference.py  _transformation_utils.py  _utils.py  binning_spec.py  config.py  keyset.py  privacy_budget.py  protected_change.py  query_builder.py  query_expr.py  session.py  truncation_strategy.py  utils.py
tmlt/analytics/_keyset_v2/: __init__.py  _keyset.py
tmlt/analytics/_keyset_v2/_ops/: __init__.py  _base.py  _cross_join.py  _detect.py  _filter.py  _from_dataframe.py  _from_tuples.py  _join.py  _project.py  _rules.py  _subtract.py  _utils.py
tmlt/analytics/_query_expr_compiler/: __init__.py  _base_measurement_visitor.py  _base_transformation_visitor.py  _compiler.py  _constraint_propagation.py  _measurement_visitor.py  _output_schema_visitor.py  _transformation_visitor.py
tmlt/analytics/constraints/: __init__.py  _base.py  _truncation.py
