[project]

name = "tmlt.analytics"

# The version field is required in this file format, even though it's ignored because of poetry-dynamic-versioning.
version = "0.0.0"

description = "Tumult's differential privacy analytics API"
license = "Apache-2.0"
readme = "README.md"
authors = []
dynamic = [ "version", "classifiers", "dependencies", "requires-python" ]

[project.urls]

homepage = "https://www.tmlt.dev/"
repository = "https://gitlab.com/tumult-labs/analytics"
documentation = "https://docs.tmlt.dev/platform/latest"

[tool.poetry]
requires-poetry = ">=2.0"

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Intended Audience :: Education",
   "Intended Audience :: Science/Research",
   "Natural Language :: English",
   "Topic :: Software Development :: Libraries",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Topic :: Scientific/Engineering",
   "Topic :: Security",
]
include = [
  { path = "doc/", format = "sdist" },
  { path = "examples/", format = "sdist" },
  { path = "test/", format = "sdist" },
  { path = "CHANGELOG.md", format = "sdist" },
  { path = "test_requirements.txt", format = "sdist" },
  { path = "NOTICE", format = "sdist" },
  { path = "LICENSE", format = "sdist" },
]
packages = [
  { include = "tmlt", from = "src" },
]

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }


[tool.poetry.dependencies]
python = "^3.9.0, <3.13"

#####################################################################
# When upating Core, PySpark, Pandas or SymPy, remember to update
# test_multi_deps in the Noxfile.

"tmlt.core" = "^0.18.0"
pandas = [
  { version = ">=1.4.0,<2.0.0", python = ">=3.9,<3.11" },
  { version = ">=1.5.0,<2.0.0", python = ">=3.11,<3.12" },
  { version = "^2.2.0", python = ">=3.12" }
]
# Excluding pyspark 3.3.0 due to known issue: https://issues.apache.org/jira/browse/SPARK-39612
pyspark = [
  { version = "^3.3.1,<3.6.0", extras = ["sql"], python = ">=3.9,<3.11" },
  { version = "^3.4.0,<3.6.0", extras = ["sql"], python = ">=3.11,<3.12" },
  { version = "^3.5.0,<3.6.0", extras = ["sql"], python = ">=3.12" },
]
sympy = "^1.8,<1.10"

#####################################################################

typeguard = "^4.0.0"
typing-extensions = "^4.1.0"
tqdm = "^4.66.4"
tabulate = "^0.8.9"
types-tabulate = "^0.8.10"

[tool.poetry.group.fix-lock.dependencies]
# This is a hack to convince Poetry to allow different versions of various
# transitive dependencies on different Python versions, as there is not a single
# version of these dependencies that works across our entire supported Python
# version range. Just having `version = "*"` does not work, as Poetry merges
# such constraints, but having an extra irrelevant version constraint prevents
# that behavior.
numpy = [
  { version = "*,!=0.0.3", python = ">=3.9,<3.10" },
  { version = "*,!=0.0.4", python = ">=3.10,<3.11" },
  { version = "*,!=0.0.5", python = ">=3.11" },
]
scipy = [
  { version = "*,!=0.0.3", python = ">=3.9,<3.10" },
  { version = "*,!=0.0.4", python = ">=3.10,<3.11" },
  { version = "*,!=0.0.5", python = ">=3.11" },
]

[tool.poetry.group.black.dependencies]
black = "^23.3"

[tool.poetry.group.isort.dependencies]
isort = { version = "^5.11", extras = ["pyproject"] }

[tool.poetry.group.mypy.dependencies]
mypy = "^1.2, !=1.4.0" # 1.4.0 incompatible with typing extensions 3.10.0 https://github.com/python/mypy/issues/15487

[tool.poetry.group.pydocstyle.dependencies]
pydocstyle = { version = "^6.3", extras = ["toml"] }

[tool.poetry.group.pylint.dependencies]
pylint = "^3.2.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-xdist = "^3.5.0"
coverage = "^6.5"
pytest-cov = "^5.0"

[tool.poetry.group.docs.dependencies]
pydata-sphinx-theme = "^0.16.0"
sphinx = "^7.2.0"
sphinx-autoapi = "^3.1.1"
sphinx-autodoc-typehints = "^2.0.1"
sphinx-automodapi = "^0.17.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
sphinx-reredirects = "^0.1.5"
sphinxcontrib-bibtex = "^2.6.2"
sphinxcontrib-images = "^0.9.4"

[tool.poetry.group.docs-examples.dependencies]
notebook = "^6.1.6"
nbconvert = "^6.0.7"
# TODO: Remove this dependency when we update nbconvert to >= 7.1.0.
lxml = { version = "5.1.0", extras = ["html-clean"] }
# Needed for code snippets in tutorials, examples
matplotlib = "^3.0.0"
seaborn = "^0.13.2"

[tool.poetry.group.audit.dependencies]
pip-audit = "^2.9.0"

[tool.poetry.group.scripting.dependencies]
nox = ">=2024.03.02"
"tmlt.nox_utils" = { git = "https://github.com/opendp/tumult-tools.git", subdirectory = "nox-utils", rev = "4663655567e2819bf5116364e347897a12652487" }

[tool.poetry.group.ci-tools.dependencies]
requests = "^2.31.0"

################################################################################
# Build configuration

[build-system]
requires = ["poetry-core>=1.3.2", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-(?P<stage>[a-zA-Z]+)\\.(?P<revision>\\d+))?"
fix-shallow-repository = true
[tool.poetry-dynamic-versioning.substitution]
files = ["src/tmlt/analytics/__init__.py"]

################################################################################
# Linter configuration

[tool.black]
force-exclude = "noxfile.py"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
follow_imports = "silent"
ignore_missing_imports = true
namespace_packages = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pylint.master]
# See https://github.com/PyCQA/pylint/issues/1975#issuecomment-387924981
extension-pkg-whitelist = ['numpy']
load-plugins = ['pylint.extensions.docparams']
# Only check param docs in docstrings that contain an Args: section.
# Set to "no" to show docstrings missing argument documentation.
accept-no-param-doc = true

[tool.pylint.'MESSAGES CONTROL']
enable = [
  # Note: there is a false positive on 'useless-suppression' when you
  # use 'disable=line-too-long' at the end of a docstring.
  # See: https://github.com/pylint-dev/pylint/issues/8301
  'useless-suppression'
]
# By default, informational rules like useless-suppression don't cause PyLint to
# produce an error.
fail-on = ['useless-suppression']
disable = [
  'arguments-differ',
  'duplicate-code',
  'fixme',
  'invalid-name',
  'logging-format-interpolation',
  'logging-fstring-interpolation',
  'missing-function-docstring',  # Redundant with pydocstyle
  'missing-raises-doc',
  'missing-return-doc',
  'no-else-return',
  'super-init-not-called',
  'too-few-public-methods',
  'too-many-ancestors',
  'too-many-arguments',
  'too-many-branches',
  'too-many-instance-attributes',
  'too-many-lines',
  'too-many-locals',
  'too-many-positional-arguments',
  'too-many-public-methods',
  'too-many-return-statements',
  'too-many-statements',
  'unbalanced-tuple-unpacking',
  'unnecessary-lambda-assignment',
  'unsubscriptable-object',
  'use-dict-literal',
  # There are a lot of false positives for unsupported-binary-operation
  # on Python 3.8 and 3.9;
  # see: https://github.com/pylint-dev/pylint/issues/7381
  'unsupported-binary-operation',
  # black and isort group tmlt.core separately from tmlt.analytics,
  # but pylint thinks they should both be grouped as 'tmlt'.
  'ungrouped-imports',
  'wrong-import-order',
]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pydocstyle]
convention = "google"
add-ignore = [
  # `D200: One-line docstring should fit on one line with quotes`
  # conflicts with pylint's `max-line-length`.
  "D200",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
# Avoids an re-import issue with serializers. See tumult-labs/tumult#3343 for
# more information and a better future fix.
addopts = ["--import-mode=importlib"]

################################################################################
# Test configuration

[tool.coverage.run]
relative_files = true
