[project]
name = "tmlt.analytics"
description = "Tumult's differential privacy analytics API"
readme = "README.md"
authors = []
license = "Apache-2.0"

dynamic = ["version"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Topic :: Security",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = [
  "differential privacy",
]

requires-python = ">=3.10,<3.13"
dependencies = [
    # When updating Core, PySpark, Pandas, or SymPy, remember to update the
    # dependency matrix in the noxfile.
    "tmlt.core >=0.18.0,<0.19",
    "pandas >=1.4.0,<2 ; python_version < '3.11'",
    "pandas >=1.5.0,<2 ; python_version == '3.11'",
    "pandas >=2.2.0,<3 ; python_version >= '3.12'",
    "pyspark[sql] >=3.3.1,<3.6 ; python_version < '3.11' and sys_platform != 'darwin'",
    "pyspark[sql] >=3.4.0,<3.6 ; python_version == '3.11' and sys_platform != 'darwin'",
    "pyspark[sql] >=3.5.0,<3.6 ; python_version >= '3.12' and sys_platform != 'darwin'",
    "pyspark[sql] >=3.5.0,<3.6 ; sys_platform == 'darwin'",
    "sympy >=1.8,<1.13",
    "typeguard >=4.0.0,<5",
    "typing-extensions >=4.1.0,<5",
    "tqdm >=4.66.4,<5",
    "tabulate >=0.8.9,<0.9",
    "types-tabulate >=0.8.10,<0.9",
]

[project.urls]
homepage = "https://www.tmlt.dev/"
documentation = "https://tmlt.dev/platform/latest"
repository = "https://github.com/opendp/tumult-analytics"

[tool.uv]
required-version = ">=0.7.0"
default-groups = "all"

[dependency-groups]
ruff = ["ruff >=0.14.3,<1"]
black = ["black >=23.3,<24"]
isort = ["isort >=5.11,<6"]
mypy = ["mypy >=1.14.0"]
test = [
    "pytest",
    "pytest-cov >=5.0,<6",
    "pytest-xdist >=3.6,<4",
]
docs = [
    "pydata-sphinx-theme >=0.14.4,<15",
    "sphinx >=7.2.0,<8",
    "sphinx-autoapi >=3.1.1,<4",
    "sphinx-autodoc-typehints >=2.0.1,<3",
    "sphinx-automodapi >=0.17.0,<0.18",
    "sphinx-copybutton >=0.5.2,<0.6",
    "sphinx-design >=0.5.0,<0.6",
    "sphinx-reredirects >=0.1.5,<0.2",
    "sphinxcontrib-bibtex >=2.6.2,<3",
    "sphinxcontrib-images >=0.9.4,<0.10",
]
docs-examples = [
    "matplotlib >=3.1.0,<4",
    "seaborn >=0.13.0,<0.14",
]
audit = ["pip-audit >=2.9.0,<3"]
ci-tools = ["requests >=2.31.0,<3"]
scripting = [
    "nox >=2024.03.02",
    "tmlt.nox_utils"
]

[tool.uv.sources]
# Switch which of these is commented out to test local changes to nox-utils:
# "tmlt.nox_utils" = { path = "../tumult-tools/nox-utils", editable = true }
"tmlt.nox_utils" = { git = "https://github.com/opendp/tumult-tools.git", subdirectory = "nox-utils" }

################################################################################
# Build configuration

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
# The default configuration expect vX.Y.Z, but we haven't been using the 'v' prefix.
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-(?P<stage>[a-zA-Z]+)\\.(?P<revision>\\d+))?"
commit-length = 8
latest-tag = true

[tool.hatch.build.hooks.version]
path = "src/tmlt/analytics/_version.py"
template = '''
"""Package version information."""
__version__ = "{version}"
'''

[tool.hatch.build.targets.sdist]
only-include = [
  "CHANGELOG.rst",
  "benchmark/",
  "doc/",
  "src/",
  "test/",
  "LICENSE",
  "NOTICE",
]
[tool.hatch.build.targets.wheel]
packages = ["src/tmlt"]

################################################################################
# Linter configuration

[tool.ruff.lint]
# A list of all of Ruff's rules can be found at https://docs.astral.sh/ruff/rules/
select = [
    # Enable Ruff-specific lints plus Pylint, pydocstyle, pyflakes, and pycodestyle.
    # The latter two cover many lints that we previously used pylint for, but
    # because they are overlapping Ruff only implements them in one set of rules.
    "RUF", "PL", "D", "F", "E", "W",
    # Also enable a subset of flake8 rules, for similar reasons to pyflakes/pycodestyle.
    "ISC", "SLF"
]
ignore = [
    # too-many-*: These rules are too context-dependent to be generally useful,
    #     we can evaluate this during code reviews.
    "PLR09",
    # magic-value-comparison: This rule flags a lot of constants that don't
    #     really make sense, we can make this call during code reviews.
    "PLR2004",
    # explicit-f-string-type-conversion: we don't generally use the !r syntax in
    #     f-strings, which this rule enforces.
    "RUF010",

    # TODO: This disables every lint that is currently failing; go through and
    #     either fix/individually disable each instance, or choose to permanently
    #     ignore each one.
    "PLW1641", # eq-without-hash
    "PLC0206", # dict-index-missing-items
    "RUF005",  # collection-literal-concatenation
    "RUF015",  # unnecessary-iterable-allocation-for-first-element
    "D415",    # missing-terminal-punctuation
    "RUF043",  # pytest-raises-ambiguous-pattern
    "D205",    # missing-blank-line-after-summary
    "D210",    # surrounding-whitespace
    "D102",    # undocumented-public-method
    "E501",    # line-too-long
    "E731",    # lambda-assignment
    "E741",    # ambiguous-variable-name
    "SLF001",  # private-member-access
    "RET504",  # unnecessary-assign
    "F401",    # unused-import
    "RUF009",  # function-call-in-dataclass-default-argument
    "E721",    # type-comparison
    "D103",    # undocumented-public-function
    "PLR0124", # comparison-with-itself
]

# Ruff's RUF001-003 rules disallow certain Unicode characters that are easily
# confused with ASCII characters; this makes sense for the most part, but some
# of our docstrings use Greek letters that fall into that category. This allows
# those characters.
allowed-confusables = ['α', 'ρ', '𝝆']

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
force-exclude = "noxfile.py"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
follow_imports = "silent"
ignore_missing_imports = true
namespace_packages = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false
check_untyped_defs = true

################################################################################
# Test configuration

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
# Avoids an re-import issue with serializers. See tumult-labs/tumult#3343 for
# more information and a better future fix.
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
relative_files = true
